test_regress/t/t_tagged_case.out
%Warning-SHORTREAL: t/t_tagged_case.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_case.v:124:14: Unsupported: matches (for tagged union)
  124 |     case (v) matches
      |              ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:133:14: Unsupported: matches (for tagged union)
  133 |     case (v) matches
      |              ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:142:15: Unsupported: matches (for tagged union)
  142 |     case (wt) matches
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:152:15: Unsupported: matches (for tagged union)
  152 |     case (wt) matches
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:162:15: Unsupported: matches (for tagged union)
  162 |     case (wt) matches
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:171:15: Unsupported: matches (for tagged union)
  171 |     case (wt) matches
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:180:15: Unsupported: matches (for tagged union)
  180 |     case (at) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:191:18: syntax error, unexpected .*, expecting ',' or ':' or :-then-begin or :-then-fork
  191 |       tagged Add .* : result = -1;
      |                  ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:192:35: syntax error, unexpected ':'
  192 |       tagged Jmp (tagged JmpU .a) : result = a;
      |                                   ^
%Error-UNSUPPORTED: t/t_tagged_case.v:193:36: Unsupported: '{} tagged patterns
  193 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_case.v:193:35: Unsupported: '{} .* patterns
  193 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                   ^
%Error-UNSUPPORTED: t/t_tagged_case.v:193:45: Unsupported: '{} tagged patterns
  193 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                             ^
%Error-UNSUPPORTED: t/t_tagged_case.v:193:44: Unsupported: '{} .* patterns
  193 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                            ^
%Error: t/t_tagged_case.v:193:50: syntax error, unexpected ':'
  193 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                                  ^
%Error: t/t_tagged_case.v:195:167: syntax error, unexpected while
  195 |     do if ((result) !== (256)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",195, (result), (256), "result", "256"); $stop; end while(0);;
      |                                                                                                                                                                       ^~~~~
%Error: t/t_tagged_case.v:198:9: syntax error, unexpected '=', expecting '('
  198 |     cht = tagged Invalid;
      |         ^
%Error: t/t_tagged_case.v:200:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  200 |     case (cht) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:207:9: syntax error, unexpected =-then-new, expecting '('
  207 |     obj = new(42);
      |         ^
%Error: t/t_tagged_case.v:210:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  210 |     case (clt) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:217:8: syntax error, unexpected '=', expecting '('
  217 |     rt = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:219:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  219 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:226:8: syntax error, unexpected '=', expecting '('
  226 |     rt = tagged RealVal (3.14159);
      |        ^
%Error: t/t_tagged_case.v:228:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  228 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:239:8: syntax error, unexpected '=', expecting '('
  239 |     rt = tagged ShortRealVal (2.5);
      |        ^
%Error: t/t_tagged_case.v:241:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  241 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:252:8: syntax error, unexpected '=', expecting '('
  252 |     st = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:254:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  254 |     case (st) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:260:8: syntax error, unexpected '=', expecting '('
  260 |     st = tagged StrVal ("hello");
      |        ^
%Error: t/t_tagged_case.v:262:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  262 |     case (st) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:272:8: syntax error, unexpected '=', expecting '('
  272 |     et = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:274:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  274 |     case (et) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:280:8: syntax error, unexpected '=', expecting '('
  280 |     et = tagged ColorVal (GREEN);
      |        ^
%Error: t/t_tagged_case.v:282:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  282 |     case (et) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:293:9: syntax error, unexpected '=', expecting '('
  293 |     evt = tagged Invalid;
      |         ^
%Error: t/t_tagged_case.v:295:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  295 |     case (evt) matches
      |                ^~~~~~~
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
